begining attempt/maths scrip
Last login: Thu Aug 29 11:40:14 on ttys001
BSM7LGFWKAIR:~ dbruer22$ python
Python 2.7.10 (default, Feb 22 2019, 21:55:15) 
[GCC 4.2.1 Compatible Apple LLVM 10.0.1 (clang-1001.0.37.14)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> print "hello world"
hello world
>>> (4-3)/(2-1)
1
>>> (4-4)/(2-1)
0
>>> equation = print "y2-y1/x2-x1"
  File "<stdin>", line 1
    equation = print "y2-y1/x2-x1"
                   ^
SyntaxError: invalid syntax
>>> equation
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'equation' is not defined
>>> e = "reeeee'
  File "<stdin>", line 1
    e = "reeeee'
               ^
SyntaxError: EOL while scanning string literal
>>>
